# pkm

./: .coveragerc  .env.example  .gitignore  debug_topic_matcher.py  final_cache_test.py  pyproject.toml  run_indexer.sh  test_cache.py  test_cache_integration.py  test_dinastia_fix.py  test_generic_topics.py  test_threshold_fix.py  test_topic_matcher.py  update_chapter_connections.py
data/matches/: test_pilot.json
data/processed/: Dinastia_chunks.json  Rhythms for Life - Alastair Sterne_chunks.json
data/test/: capitulo_01_topics.json  imperio_capitulos.txt  quijano_capitulos.txt
data/validated/: meszaros_test_results.json
docs/: 00_PROJECT_BRIEF.md  01_ARCHITECTURE.md  02_CURRENT_STATUS.md  03_CODING_STANDARDS.md  04_DATA_DICTIONARY.md  06_SESSION_LOG.md  08_SPRINT_DEPENDENCIES.md  09_AMBIENTACAO_AGENTES.md  10_ROADMAP_v2.md  11_TOPIC_EXTRACTION.md  RECOVERY.md  cron_setup.md  daily_sync_system.md
scripts/: backup_vectors.sh  cron_daily_sync.sh  cron_daily_sync_production.sh  process_vault_topics.sh  production_daily_sync.sh  recover_failed_notes.py  restore_vectors.sh  rollback_properties.sh  run_daily_sync.sh  run_topic_classification.sh  run_topic_classification_40_como_conhecemos.sh  setup_incremental_cron.sh  test_daily_sync.sh  test_production_dry_run.sh  test_topic_extractor.sh  verify_index.py
src/: __init__.py
src/indexing/: __init__.py  backup_manager.py  chroma_client.py  chunker.py  incremental_cli.py  incremental_indexer.py  text_cleaner.py  vault_indexer.py
src/ingestion/: __init__.py  chapter_parser.py  chapter_title_extractor.py  chunker.py  (+9 more)
(+65 files in other folders)
